Тестирование всего бэкенда и исправление багов
