# backend/musicmanBack/src/main/java/ru/vsu/csf/asashina/musicmanBack/model/request/CreateSongRequest.java
@@ -6,14 +6,14 @@ import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
 import lombok.Data;
-import org.springframework.format.annotation.DateTimeFormat;
+import lombok.NoArgsConstructor;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.time.LocalTime;
 import java.util.List;
 
 @Data
 @AllArgsConstructor
+@NoArgsConstructor
 public class CreateSongRequest {
 
     @NotBlank(message = "Название не может быть пустым")
@@ -21,10 +21,9 @@ public class CreateSongRequest {
     @Size(max = 255, message = "Название не может превышать 255 символов")
     private String title;
 
-    @DateTimeFormat(pattern = "mm:ss")
-    @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
-    @NotNull(message = "Длительность не может быть пустой")
-    private LocalTime duration;
+    @NotBlank(message = "Длительность не может быть пустой")
+    @Schema(requiredMode = Schema.RequiredMode.REQUIRED, format = "mm:ss")
+    private String duration;
 
     @Schema(requiredMode = Schema.RequiredMode.REQUIRED)
     @NotNull(message = "ИД исполнителя не может быть пустым")
